--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/jsweetman/assets/images/favicon.ico" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Frontend Boilerplate with React and TypeScript</title>
+    <title>Jonathan Sweetman</title>
   </head>
   <body>
     <div id="root"></div>
